@@ -3,6 +3,7 @@
 
 	* numeric.c: Speed up cob_decimal_add, cob_decimal_sub, cob_decimal_cmp
 				Use the powers of 10 table instead of recomputing
+				Add cob_decimal_copy for use by emitted code
 
 2021-12-30  Ron Norman <rjn@inglenet.com>
 
